// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildLinuxPodmanCommand > should generate basic command with minimal configuration 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with all meta variables 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_GROUPS=1:2 \\
  -e PORTAINER_GROUP=5 \\
  -e PORTAINER_TAGS=10:20 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with async mode enabled 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_ASYNC=1 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with custom environment variables 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e MY_VAR=value1 \\
  -e ANOTHER_VAR=value2 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with edge ID generator 1`] = `
"PORTAINER_EDGE_ID=$(uuidgen) 

sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=$PORTAINER_EDGE_ID \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with edge groups 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_GROUPS=1:2:3 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with empty agent secret 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with portainer group 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PORTAINER_GROUP=5 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with self-signed certificates allowed 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=1 \\
  -e AGENT_SECRET=test-secret \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command with tags 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PORTAINER_TAGS=10:20:30 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`buildLinuxPodmanCommand > should generate command without agent secret 1`] = `
"sudo systemctl enable --now podman.socket

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;
